nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: nginx
